Checking in changes made on production site. Tweaks to make fancy skin look better on iPhone. Begin supporting multiple hacks for specific mobile platforms. Pass the type of mobile platform to template. Convert article URLs to their mobile equivalents, where possible. More hooks for removing web bugs and ads. Use "items.last_update" database field to mean "when the article was added to the database", and use that for ordering. IOW, articles get put at the end of a list as they come in, regardless of what the RSS file says. Then the list is read in reverse order (newest-first). Update 20 feeds in parallel by default, instead of 10.

--- a/htdocs/skins/fancy/iphone.css
+++ b/htdocs/skins/fancy/iphone.css
@@ -2,14 +2,15 @@
  * Specialized settings for iPhone/iPod Touch.
  */
 body {
-	font-size:		18pt;
+/*	font-size:		18pt;*/
+	font-size:		24pt !important;
 }
 
-/*
-.item {
-	font-size:		12pt;
+.item .item-summary,
+.item .item-content {
+	font-family:		Helvetica, sans-serif;
+/*	font-size:		24pt;*/
 }
-*/
 
 .item .item-header {
 	/* XXX - Actually, this should in Safari as well */
@@ -21,7 +22,19 @@ body {
 	border-bottom-color:	navy;
 }
 
+.item .mark-read {
+	display:		none;
+}
+
 input[type="checkbox"].mark-check {
-	width:			2.4em;
+/*	width:			2.4em;
 	height:			2.4em;
+*/
+	width:			4em;
+	height:			4em;
+}
+
+input[type="submit"],
+input[type="reset"] {
+	font-size:		80%;
 }
